src/components/status.css
/* ... */
.status .media-gif video {
  object-fit: cover;
  pointer-events: none;
}
.status .media-contain video {
  object-fit: contain !important;
}
.status .media-audio {
  border: 0;
  min-height: 0;
}
.status .media-audio audio {
  width: 100%;
}

/* CARD */

.card {
  display: flex;
  margin-top: 8px;
  border-radius: 8px;
  border: 1px solid var(--outline-color);
  overflow: hidden;
  color: inherit;
  align-items: stretch;
  background-color: var(--bg-color);
  max-height: 160px;
}
.status.large .card.link.large {
  border-radius: 16px;
  flex-direction: column;
  max-height: none;
}
.card .image {
  width: 35%;
  height: auto;
  flex-grow: 1;
  border-inline-end: 1px solid var(--outline-color);
  object-fit: cover;
  aspect-ratio: 1 / 1;
}
.status.large .card.link.large .image {
  aspect-ratio: 1.91 / 1;
  width: 100%;
  max-height: 50vh;
  border-inline-end: 0;
  border-block-end: 1px solid var(--outline-color);
}
.card:is(:hover, :focus) .image {
  animation: position-object 5s ease-in-out 1s 5;
}
.card p {
  margin: 0;
}
.card .meta-container {
  padding: 8px;
  min-width: 0;
  flex-grow: 1;
  align-self: center;
}
.card.large .meta-container {
  align-self: flex-start;
}
.card .title {
  line-height: 1.25;
  font-weight: normal;
  text-overflow: ellipsis;
  overflow: hidden;
  display: -webkit-box;
  display: box;
  -webkit-box-orient: vertical;
  box-orient: vertical;
  -webkit-line-clamp: 2;
  line-clamp: 2;
}
.card .meta {
  font-size: smaller;
  opacity: 0.75;
  margin: 0;
  text-overflow: ellipsis;
  overflow: hidden;
  display: -webkit-box;
  display: box;
  -webkit-box-orient: vertical;
  box-orient: vertical;
  -webkit-line-clamp: 2;
  line-clamp: 2;
}
.card .meta.domain {
  opacity: 1;
  color: var(--link-color);
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  display: block;
}
a.card {
  text-decoration: none;
  transition: opacity 0.2s ease-in-out;
}
a.card:is(:hover, :focus) {
  border: 1px solid var(--link-color);
  box-shadow: 0 0 0 2px var(--link-faded-color);
}
.card.video {
  max-width: 320px;
  max-height: 320px;
}
.card.video iframe {
  width: 100%;
  height: 100%;
}

/* POLLS */

.poll {
  transition: opacity 0.2s ease-in-out;
}
.poll.loading {
  opacity: 0.5;
  pointer-events: none;
}
.poll.read-only {
  pointer-events: none;
}
.poll-option {
  margin-top: 8px;
  padding: 8px;
  display: flex;
  gap: 8px;
  justify-content: space-between;
  background-color: var(--bg-blur-color);
  background-image: linear-gradient(
    to right,
    var(--link-faded-color),
    var(--link-faded-color) var(--percentage),
    transparent var(--percentage),
    transparent
  );
  border-radius: 8px;
  border: 1px solid rgba(128, 128, 128, 0.1);
  align-items: center;
}
.poll-label {
  width: 100%;
  display: flex;
  gap: 8px;
  cursor: pointer;
}
.poll-option-votes {
  flex-shrink: 0;
  font-size: 90%;
}
.poll-option-leading .poll-option-votes {
  font-weight: bold;
}
.poll-vote-button {
  margin-top: 8px;
}
.poll-meta {
  margin: 8px 0;
  font-size: 90%;
}
.poll-option-title .icon {
  vertical-align: middle;
}

/* EXTRA META */

.status .extra-meta {
  padding-top: 8px;
  color: var(--text-insignificant-color);
  font-size: 90%;
}
.status .extra-meta * {
  vertical-align: middle;
}
.status .extra-meta a {
  color: inherit;
  text-decoration: none;
}
.status .extra-meta a:is(:hover, :focus) {
  text-decoration: underline;
}
.status .extra-meta .edited:is(:hover, :focus) {
  cursor: pointer;
  color: var(--text-color);
}
.status.large .extra-meta {
  padding-top: 0;
  margin-left: calc(-50px - 16px);
}

/* ACTIONS */

.status .actions {
  display: flex;
  gap: 8px;
}
.status.large .actions {
  padding-top: 4px;
  padding-bottom: 16px;
  margin-left: calc(-50px - 16px);
  color: var(--text-insignificant-color);
  border-top: 1px solid var(--outline-color);
  margin-top: 8px;
}
.status .action.has-count {
  flex: 1;
}
.status .action > button {
  min-height: 40px;
  min-width: 40px;
  padding: 0 8px;
  font-variant-numeric: tabular-nums;
}
.status .action > button.plain {
  color: inherit;
  border: 1.5px solid transparent;
}
.status .action > button.plain:is(:hover, :focus) {
  color: var(--link-color);
  background-color: var(--button-plain-bg-hover-color);
}
.status .action > button.plain.reblog-button:is(:hover, :focus) {
  color: var(--reblog-color);
}
.status .action > button.plain.reblog-button.checked {
  color: var(--reblog-color);
  border-color: var(--reblog-color);
}
@keyframes reblogged {
  5% {
    transform: translate(-2px, -2px);
  }
  10% {
    transform: translate(2px, 2px);
  }
  15% {
    transform: translate(0, 0);
  }
  100% {
    transform: translate(30px, -30px);
    opacity: 0;
  }
}
.status .action > button.plain.reblog-button.checked .icon {
  animation: reblogged 1s ease-in-out;
}
.status .action > button.plain.favourite-button:is(:hover, :focus) {
  color: var(--favourite-color);
}
.status .action > button.plain.favourite-button.checked {
  color: var(--favourite-color);
  border-color: var(--favourite-color);
}
@keyframes hearted {
  20% {
    transform: scale(1.25) translateY(-1px);
  }
  45% {
    transform: scale(1);
  }
  70% {
    transform: scale(1.5) translateY(-2px);
  }
  100% {
    transform: scale(1);
  }
}
.status .action > button.plain.favourite-button.checked .icon {
  animation: hearted 1s ease-out;
}
.status .action > button.plain.bookmark-button.checked {
  color: var(--link-color);
  border-color: var(--link-color);
}
@keyframes bookmarked {
  25% {
    transform: translateY(-10px) rotate(10deg);
    opacity: 0.5;
  }
  50% {
    transform: translateY(0);
    opacity: 1;
  }
  75% {
    transform: translateY(-15px) rotate(-10deg);
    opacity: 0.5;
  }
  100% {
    transform: translateY(0);
    opacity: 1;
  }
}
.status .action > button.plain.bookmark-button.checked .icon {
  animation: bookmarked 1s ease-in-out;
}
/* ... */

